UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Created for E-Rate Task, Lisa Barrow</description>
    <label>Account Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>