UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Activity_Age__c.field-meta.xml
<CustomField>
    <fullName>Activity_Age__c</fullName>
    <formula>(IF(IsClosed, LastModifiedDate - CreatedDate, NOW() - CreatedDate))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>