UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/BDT__c.field-meta.xml
<CustomField>
    <fullName>BDT__c</fullName>
    <description>Created for Misty King 07/2021 for E-Rate 470 Task on case 00808001</description>
    <label>BDT #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>