UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/BDT_Number__c.field-meta.xml
<CustomField>
    <fullName>BDT_Number__c</fullName>
    <formula>Opportunity__r.BDT_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDT Number</label>
    <type>Text</type>
</CustomField>