UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/BDT_Status__c.field-meta.xml
<CustomField>
    <fullName>BDT_Status__c</fullName>
    <label>BDT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>BDT Submitted</fullName>
            </value>
            <value>
                <fullName>BDT Competed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>