UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Chief_Executive_Officer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Chief_Executive_Officer_Full_Name__c</fullName>
    <description>Created for E-Rate Task for Lisa Barrows</description>
    <label>Chief Executive Officer Full Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>