UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Child_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Child_Campaign__c</fullName>
    <description>Created for Lit Building task</description>
    <label>Child Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connectivity - Lit Building - Tampa – Accounts</fullName>
                <default>true</default>
                <label>Connectivity - Lit Building – Accounts</label>
            </value>
            <value>
                <fullName>Connectivity - Lit Building - Tampa - Meeting Incentive</fullName>
                <label>Connectivity - Lit Building -  Meeting Incentive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>