UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Company_Stage__c.field-meta.xml
<CustomField>
    <fullName>Company_Stage__c</fullName>
    <description>Created for Britt for Lit Building Task 11/2020</description>
    <inlineHelpText>Select the appropriate stage the company is in.</inlineHelpText>
    <label>Company Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>