UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Contact_Information_Valid__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Valid__c</fullName>
    <description>Created for Britt for Lit Building task 11/2020</description>
    <inlineHelpText>If the contact information on the account is accurate, select Yes, if not, select No and correct the contact information on the account.</inlineHelpText>
    <label>Contact Information Valid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>