UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Created for Britt for Lit Buildings task 11/2020</description>
    <inlineHelpText>Select the Role of the contact you are speaking with.</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client/Reference</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Legal Notice Person 1</fullName>
            </value>
            <value>
                <fullName>Legal Notice Person 2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Signor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>