UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Created for Britt for Lit Building Task 11/2020</description>
    <inlineHelpText>If Currently Under Contract = Yes, populate the contract end date.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>