UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Carrier__c</fullName>
    <description>Created for Britt for Lit Building</description>
    <inlineHelpText>Select the current carrier or ISP.</inlineHelpText>
    <label>Current Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Centurylink</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>Crown Castle</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>WOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>