UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Currently_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Currently_Under_Contract__c</fullName>
    <description>Created for Britt for Lit Buildings project 11/12/2020</description>
    <inlineHelpText>Does the customer have a current active contract?</inlineHelpText>
    <label>Currently Under Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>