UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <description>Created for Tanya Duck for Product Migration Task on Case 00739154 01/19/2021</description>
    <inlineHelpText>Select the appropriate response, if Other is selected, please add Comments.</inlineHelpText>
    <label>Customer Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested at this time</fullName>
            </value>
            <value>
                <fullName>Still In contract Current Carrier</fullName>
            </value>
            <value>
                <fullName>No bundled services required</fullName>
            </value>
            <value>
                <fullName>Requested Quote</fullName>
            </value>
            <value>
                <fullName>Other (add Comments)</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Answered - Requested MA</fullName>
            </value>
            <value>
                <fullName>Answered - MA Signed</fullName>
            </value>
            <value>
                <fullName>Answered - Do Not Call</fullName>
            </value>
            <value>
                <fullName>Answered - Not Interested</fullName>
            </value>
            <value>
                <fullName>Answered - Not Interested (Competitor)</fullName>
            </value>
            <value>
                <fullName>Answered - Unqualified</fullName>
            </value>
            <value>
                <fullName>Answered - Other</fullName>
            </value>
            <value>
                <fullName>Answered - Referred Elsewhere</fullName>
            </value>
            <value>
                <fullName>Answered - Intro Reject</fullName>
            </value>
            <value>
                <fullName>Answered - Pitch Reject</fullName>
            </value>
            <value>
                <fullName>No Answer - Bad Number / Wrong Number</fullName>
            </value>
            <value>
                <fullName>No Answer - Left VM</fullName>
            </value>
            <value>
                <fullName>No Answer - No VM</fullName>
            </value>
            <value>
                <fullName>No Answer - Other</fullName>
            </value>
            <value>
                <fullName>Gatekeeper Probed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>