UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Customer_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Temperature__c</fullName>
    <description>Created for Tanya Duck for Product Migration Task on Case 00739154 01/19/2021</description>
    <inlineHelpText>Select Hot = Happy, Warm = Neutral, or Cold = Not Happy</inlineHelpText>
    <label>Customer Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>