UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Disposition_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Disposition_of_Property__c</fullName>
    <label>Disposition of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Competitive Agreement</fullName>
            </value>
            <value>
                <fullName>Competitive Agreement, Not Recommended</fullName>
            </value>
            <value>
                <fullName>No Competitive Agreement,  Recommended</fullName>
            </value>
            <value>
                <fullName>No Competitive Agreement, Not Recommended</fullName>
            </value>
            <value>
                <fullName>Recommend for Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>