UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/E_Rate_Support_Specialist__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_Support_Specialist__c</fullName>
    <description>Created for E-Rate Task, Lisa Barrow</description>
    <inlineHelpText>Select Yes if you would like the E-Rate Support Specialist to handle this opportunity.  Select No if you want to handle it yourself.</inlineHelpText>
    <label>E-Rate Support Specialist Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>