UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/E_Rate_Task__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_Task__c</fullName>
    <description>Created for Lisa for Erate Task</description>
    <label>E-Rate Task</label>
    <length>20</length>
    <type>Text</type>
</CustomField>