UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/E_Rate_Task_Disposition__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_Task_Disposition__c</fullName>
    <description>Created for Lisa Barrow for E-Rate Task 11/09/2020</description>
    <inlineHelpText>Select a resolution for the E-Rate task before closing the task.</inlineHelpText>
    <label>E-Rate Task Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Refer to a New Contact</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Remove from Call List</fullName>
            </value>
            <value>
                <fullName>Call Back Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>