UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/E_Rate_User__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_User__c</fullName>
    <description>Created for E-Rate Task, Lisa Barrow</description>
    <label>E-Rate User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>