UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/File_2__c.field-meta.xml
<CustomField>
    <fullName>File_2__c</fullName>
    <description>Created for E-Rate Task Lisa Barrow 11/09/2020</description>
    <label>K12 Script for E-Rate</label>
    <type>Url</type>
</CustomField>