UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Frontier_Customer__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Customer__c</fullName>
    <description>Created for E-Rate Task, Lisa Barrow</description>
    <label>Frontier Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>