UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Lead_Contact_State_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_State_Name__c</fullName>
    <description>Flow builder automatically updates this field based on the WhoID field. From the WhoID, the state is captured for Contact/Lead, and that value is put on this field. 

Record-Trigger: Task - Update Related Lookup Fields</description>
    <label>Lead/Contact State Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>