UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Created for the Lit Building Task.  This will be auto populated from the import file</description>
    <label>Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>