UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Order_Correction_Required__c.field-meta.xml
<CustomField>
    <fullName>Order_Correction_Required__c</fullName>
    <description>Created for Order Correction(Rejection)Task case #00738654 4/2021 (all teams working orders).</description>
    <label>Order Correction Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BDT/CPQ issues</fullName>
            </value>
            <value>
                <fullName>Billing Account Number Missing for Upgrade/Disconnect</fullName>
            </value>
            <value>
                <fullName>Circuit ID missing for upgrades/disconnects</fullName>
            </value>
            <value>
                <fullName>Contact missing/incorrect</fullName>
            </value>
            <value>
                <fullName>Contract missing/incorrect</fullName>
            </value>
            <value>
                <fullName>DGF Handoff/Topology Change Required</fullName>
            </value>
            <value>
                <fullName>DGF Incorrect Information</fullName>
                <label>DGF Missing or Incorrect Information</label>
            </value>
            <value>
                <fullName>DID Enrichment not complete</fullName>
            </value>
            <value>
                <fullName>DID Update</fullName>
            </value>
            <value>
                <fullName>Disconnect ETL awareness/authorization</fullName>
                <label>Disconnect ETL/ETF awareness/authorization</label>
            </value>
            <value>
                <fullName>E-Reach/Off-Net address Qualification</fullName>
            </value>
            <value>
                <fullName>Expired Quote need Refreshed</fullName>
            </value>
            <value>
                <fullName>MAC Form Ready for Signature</fullName>
            </value>
            <value>
                <fullName>Missing/Invalid Quick Quote</fullName>
            </value>
            <value>
                <fullName>Need Countersigned Signatures</fullName>
            </value>
            <value>
                <fullName>New Vlocity order required</fullName>
            </value>
            <value>
                <fullName>Opportunity not complete</fullName>
            </value>
            <value>
                <fullName>Order Not Clear/Conflicting</fullName>
            </value>
            <value>
                <fullName>Redesign Required</fullName>
            </value>
            <value>
                <fullName>SO - Cancel Request</fullName>
            </value>
            <value>
                <fullName>SO - DID/SEAT Changes Needed</fullName>
            </value>
            <value>
                <fullName>SO - Due Date Change Needed</fullName>
            </value>
            <value>
                <fullName>SO - Handoff Changes Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>