UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Order_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Hold_Reason__c</fullName>
    <description>Created for STATS orders 4/2021</description>
    <inlineHelpText>Select the reason the order is held or delayed</inlineHelpText>
    <label>Order Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
            <value>
                <fullName>Delayed Order (DOR)</fullName>
            </value>
            <value>
                <fullName>DPI Support</fullName>
            </value>
            <value>
                <fullName>Management Approval/Decision</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Schedule ID</fullName>
            </value>
            <value>
                <fullName>SIFT Ticket</fullName>
            </value>
            <value>
                <fullName>Tables Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>