UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Owners_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owners_Manager__c</fullName>
    <formula>CreatedBy.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>