UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Products_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Products_Quoted__c</fullName>
    <description>Created for Misty King 07/2021 for E-Rate 470 Task on case 00808001</description>
    <label>Products Quoted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>Fiberoptics</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>EVPL</fullName>
            </value>
            <value>
                <fullName>Elan</fullName>
            </value>
            <value>
                <fullName>Eline</fullName>
            </value>
            <value>
                <fullName>FOTS</fullName>
            </value>
            <value>
                <fullName>Managed Router</fullName>
            </value>
            <value>
                <fullName>SD-Wan</fullName>
            </value>
            <value>
                <fullName>Managed Wifi</fullName>
            </value>
            <value>
                <fullName>Wireless backup</fullName>
            </value>
            <value>
                <fullName>Managed Firewall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>