UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Ready_for_RFP_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_RFP_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for RFP Coordinator</label>
    <type>Checkbox</type>
</CustomField>