UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Misty King 07/2021 for E-Rate 470 Task on case 00808001</description>
    <label>Relationship</label>
    <type>Checkbox</type>
</CustomField>