UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/RVP_of_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RVP_of_Account_Owner_Name__c</fullName>
    <formula>Account.Owner.RVP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVP of Account Owner Name</label>
    <type>Text</type>
</CustomField>