UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/RVP_of_Assigned__c.field-meta.xml
<CustomField>
    <fullName>RVP_of_Assigned__c</fullName>
    <formula>Owner:User.RVP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVP of Assigned</label>
    <type>Text</type>
</CustomField>