UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Secondary_Disposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Disposition_Notes__c</fullName>
    <label>Secondary Disposition Notes</label>
    <type>TextArea</type>
</CustomField>