UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>360 Proposals Delivered</fullName>
            </value>
            <value>
                <fullName>Appointment Attended</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deal Closed</fullName>
            </value>
            <value>
                <fullName>Deal Lost</fullName>
            </value>
            <value>
                <fullName>Demos</fullName>
            </value>
            <value>
                <fullName>Door Knocks</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New Opportunities</fullName>
            </value>
            <value>
                <fullName>Pending approval from Frontier</fullName>
            </value>
            <value>
                <fullName>Pending approval from Property</fullName>
            </value>
            <value>
                <fullName>Proposal Delivered</fullName>
            </value>
            <value>
                <fullName>Prospect Contacted</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Revenue of Proposals Delivered</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>