UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/Task_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Task_Attribute__c</fullName>
    <label>Task Attribute</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>DRB</fullName>
            </value>
            <value>
                <fullName>BID</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>470 Proposal Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>