UCF-APR2.4/ftr main/force-app/main/default/objects/Activity/fields/WhatID_Conversion__c.field-meta.xml
<CustomField>
    <fullName>WhatID_Conversion__c</fullName>
    <description>Converts Related To Field to text for email template population created for Order Correction Task.</description>
    <label>WhatID Conversion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>